--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stages {
         stage('Clone Code') {
             steps {
-                git 'https://github.com/yourusername/your-repo-name.git'
+                git credentialsId: 'github-token', url: 'https://github.com/RiyaS-sys/mynode.js', branch: 'main'
             }
         }
 
