--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,38 +2,55 @@ pipeline {
     agent any
 
     tools {
-        nodejs "NodeJS 18"  // You can name your version
+        nodejs "NodeJS_20" // Replace with your Node.js tool name from Jenkins global tool config
+    }
+
+    environment {
+        PATH = "${tool 'NodeJS_20'}/bin:${env.PATH}" // Ensure Node.js is in PATH
     }
 
     stages {
         stage('Clone Code') {
             steps {
-                git credentialsId: 'github-token', url: 'https://github.com/RiyaS-sys/mynode.js', branch: 'main'
+                git credentialsId: 'github-token', url: 'https://github.com/RiyaS-sys/mynode.js'
             }
         }
 
         stage('Install Dependencies') {
             steps {
-                sh 'npm install'
+                bat 'npm install'
             }
         }
 
         stage('Run Tests') {
             steps {
-                sh 'npm test'  // Make sure you have test scripts
+                bat 'npm test'
             }
         }
 
         stage('Build') {
             steps {
-                echo 'Build step - optional for Node.js'
+                bat 'npm run build'
             }
         }
 
         stage('Deploy') {
             steps {
-                echo 'Deploying... (you can set this up to copy files to server)'
+                echo 'Deploy stage - add deployment script here.'
+                // bat 'your-deploy-command.bat'
             }
+        }
+    }
+
+    post {
+        always {
+            echo 'Cleaning up...'
+        }
+        success {
+            echo 'Build completed successfully!'
+        }
+        failure {
+            echo 'Build failed.'
         }
     }
 }
