--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     tools {
-        nodejs "NodeJS 18" // <- Use the exact name from Global Tool Configuration
+        nodejs 'NodeJS 18' // Match your configured tool name
     }
 
     environment {
@@ -12,32 +12,32 @@ pipeline {
     stages {
         stage('Clone Code') {
             steps {
-                git credentialsId: 'github-token', url: 'https://github.com/RiyaS-sys/mynode.js'
+                git branch: 'main', url: 'https://github.com/RiyaS-sys/mynode.js'
             }
         }
 
         stage('Install Dependencies') {
             steps {
-                bat 'npm install'
+                sh 'npm install'
             }
         }
 
         stage('Run Tests') {
             steps {
-                bat 'npm test'
+                sh 'npm test'
             }
         }
 
         stage('Build') {
             steps {
-                bat 'npm run build'
+                sh 'npm run build'
             }
         }
 
         stage('Deploy') {
             steps {
-                echo 'Deploy stage - add deployment script here.'
-                // bat 'your-deploy-command.bat'
+                echo 'Deploying application...'
+                // Add deployment commands here
             }
         }
     }
@@ -47,12 +47,13 @@ pipeline {
             echo 'Cleaning up...'
         }
         success {
-            echo 'Build completed successfully!'
+            echo 'Build succeeded!'
         }
         failure {
             echo 'Build failed.'
         }
     }
 }
+
 
 
