--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,39 +1,49 @@
 pipeline {
     agent any
 
-    tools {
-        nodejs 'NodeJS 18' // Use the exact name shown in your Jenkins tool configuration
+    environment {
+        NODE_HOME = tool name: 'NodeJS 18', type: 'NodeJS'
     }
 
     stages {
-        stage('Clone Code') {
+        stage('Checkout SCM') {
             steps {
-                git branch: 'main', url: 'https://github.com/RiyaS-sys/mynode.js'
+                checkout scm
             }
         }
 
         stage('Install Dependencies') {
             steps {
-                bat 'npm install'
+                script {
+                    bat 'npm install'
+                }
             }
         }
 
         stage('Run Tests') {
             steps {
-                bat 'npm test'
+                script {
+                    // Skipping tests if not defined
+                    echo "Skipping tests as none are defined"
+                }
             }
         }
 
         stage('Build') {
             steps {
-                bat 'npm run build'
+                script {
+                    // Add your build commands here
+                    echo "Building project..."
+                }
             }
         }
 
         stage('Deploy') {
             steps {
-                echo 'Deploying the application...'
-                // Add deploy commands here
+                script {
+                    // Add your deploy commands here
+                    echo "Deploying project..."
+                }
             }
         }
     }
@@ -42,14 +52,17 @@ pipeline {
         always {
             echo 'Cleaning up...'
         }
+
         success {
             echo 'Build succeeded!'
         }
+
         failure {
             echo 'Build failed.'
         }
     }
 }
+
 
 
 
