--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,7 @@ pipeline {
     environment {
         DOCKER_IMAGE = 'blood-bank-app'
         DOCKER_TAG = "${env.BUILD_NUMBER}"
+        PATH = "${env.PATH};C:\\Program Files\\nodejs\\;C:\\Program Files\\Docker\\Docker\\resources\\bin"
     }
     
     stages {
@@ -16,30 +17,31 @@ pipeline {
         stage('Install Dependencies') {
             steps {
                 echo 'Installing dependencies...'
-                sh 'npm install'
+                bat 'npm install'
             }
         }
         
         stage('Run Tests') {
             steps {
                 echo 'Running tests...'
-                sh 'npm test'
+                bat 'npm test'
             }
         }
         
         stage('Build Docker Image') {
             steps {
                 echo 'Building Docker image...'
-                sh "docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} ."
-                sh "docker tag ${DOCKER_IMAGE}:${DOCKER_TAG} ${DOCKER_IMAGE}:latest"
+                bat "docker build -t %DOCKER_IMAGE%:%DOCKER_TAG% ."
+                bat "docker tag %DOCKER_IMAGE%:%DOCKER_TAG% %DOCKER_IMAGE%:latest"
             }
         }
         
         stage('Run Docker Compose') {
             steps {
                 echo 'Starting application with Docker Compose...'
-                sh 'docker-compose down || true'
-                sh 'docker-compose up -d'
+                // Try to bring down any existing containers, but don't fail if there aren't any
+                bat 'docker-compose down || echo "No containers to remove"'
+                bat 'docker-compose up -d'
             }
         }
         
@@ -47,12 +49,32 @@ pipeline {
             steps {
                 echo 'Running integration tests against Docker container...'
                 script {
-                    // Wait for application to be ready
-                    sh 'sleep 10'
+                    // Wait for application to be ready (Windows-style sleep)
+                    bat 'timeout /t 10 /nobreak'
                     
-                    // Here you can run curl or other tools to test your running application
-                    sh 'curl -f http://localhost:3000 || true'
+                    // Test the running application
+                    bat 'curl -f http://localhost:3000 || echo "Service check completed"'
                 }
+            }
+        }
+        
+        stage('Generate Test Reports') {
+            steps {
+                echo 'Generating test reports...'
+                bat 'npm test -- --coverage'
+                
+                // Archive the test results if you're using JUnit reporter
+                junit allowEmptyResults: true, testResults: 'junit-*.xml'
+                
+                // Archive the coverage report
+                publishHTML(target: [
+                    allowMissing: false,
+                    alwaysLinkToLastBuild: false,
+                    keepAll: true,
+                    reportDir: 'coverage/lcov-report',
+                    reportFiles: 'index.html',
+                    reportName: 'Coverage Report'
+                ])
             }
         }
     }
@@ -60,7 +82,7 @@ pipeline {
     post {
         always {
             echo 'Cleaning up...'
-            sh 'docker-compose down || true'
+            bat 'docker-compose down || echo "No containers to remove"'
         }
         success {
             echo 'Pipeline completed successfully!'
